@@ -4,6 +4,11 @@ bzr-0.0.3  NOT RELEASED YET
 
     * Refactored inventory storage to insert a root entry at the top.
 
+  ENHANCEMENTS:
+
+    * New "directories" internal command lists versioned directories
+      in the tree.
+
 
 
 bzr-0.0.2  "black cube"  2003-03-31
